removed location icon

--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
             href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@500&display=swap"
             rel="stylesheet"
         /> -->
-        <script
+        <!-- <script
             src="https://kit.fontawesome.com/5a36efa976.js"
             crossorigin="anonymous"
-        ></script>
+        ></script> -->
 
         <title>WeatherApp</title>
     </head>
